--- a/index.html
+++ b/index.html
@@ -51,25 +51,6 @@
                                 <button class = "x"></button>
                                 <button class = "y"></button>
                             </div>
-                            <a href = "https://github.com/racheljayi/RiotCreche" class = "thumbnail">
-                                <img src = "../images/projects/riotcreche.png" alt = "RiotCreche mockup">
-                            </a>
-                            <div class = "description">
-                                <h4>RiotCreche</h4>
-                                <h5>In Development</h5>
-                                <p>RiotCreche is a Python NumPy machine learning model to predict the most likely
-                                    winner between two MOBA (League of Legends) team compositions.
-                                </p><p>Data for this project was web-scraped from the analytics site op.gg.</p>
-                                <a href = "https://github.com/racheljayi/RiotCreche" class = "btn">enter project</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project2">
-                        <div class = "card">
-                            <div class = "accentBar">
-                                <button class = "x"></button>
-                                <button class = "y"></button>
-                            </div>
                             <a href = "https://github.com/amb10/huddleUp" class = "thumbnail">
                                 <img src = "../images/projects/huddleUp.png" alt = "huddleUp mockup">
                             </a>
@@ -85,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project3">
+                    <div class="project2">
                         <div class = "card">
                             <div class = "accentBar">
                                 <button class = "x"></button>
@@ -102,6 +83,25 @@
                                 <p>KeyFinder uses the OpenAI API to decide which keyword to pull and Google Knowledge
                                     Bank Search API to find definitions in the context of the text.</p>
                                 <a href = "https://github.com/racheljayi/KeyFinder" class = "btn">enter project</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project3">
+                        <div class = "card">
+                            <div class = "accentBar">
+                                <button class = "x"></button>
+                                <button class = "y"></button>
+                            </div>
+                            <a href = "https://github.com/racheljayi/RiotCreche" class = "thumbnail">
+                                <img src = "../images/projects/riotcreche.png" alt = "RiotCreche mockup">
+                            </a>
+                            <div class = "description">
+                                <h4>RiotCreche</h4>
+                                <h5>September 2022</h5>
+                                <p>RiotCreche is a Python NumPy machine learning model to predict the most likely
+                                    winner between two MOBA (League of Legends) team compositions.
+                                </p><p>Data for this project was web-scraped from the analytics site op.gg.</p>
+                                <a href = "https://github.com/racheljayi/RiotCreche" class = "btn">enter project</a>
                             </div>
                         </div>
                     </div>
