--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Rachel J.</title>
-    <link rel="stylesheet" href="../stylesheets/page.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323">
+    <link rel="stylesheet" href="stylesheets/page.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Silkscreen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anonymous+Pro">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
-    <script src="../scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
 <body>
 <div>
@@ -28,14 +28,14 @@
         <section class="page" id="page1" data-scroll>
             <div class = "aboutGrid">
                 <div class="aboutMe">
-                    <h2 class="hello">Hello!<h3>I'm Rachel J.</h3></h2>
+                    <h2 class="hello">Hello!<h3>I'm Rachel.</h3></h2>
                     <p class="intro">I'm an undergraduate computer science student currently based
                         in Pittsburgh. My career interests include software design, artificial intelligence,
                         machine learning, and game development.
                         Thanks for stopping by!</p>
                 </div>
                 <div class = "aboutGraphic">
-                    <img src = "../images/flower_copy_resized.png" alt = "Flowers">
+                    <img src = "images/flower_copy_resized.png" alt = "Flowers">
                 </div>
             </div>
         </section>
@@ -52,7 +52,7 @@
                                 <button class = "y"></button>
                             </div>
                             <a href = "https://github.com/amb10/huddleUp" class = "thumbnail">
-                                <img src = "../images/projects/huddleUp.png" alt = "huddleUp mockup">
+                                <img src = "images/projects/huddleUp.png" alt = "huddleUp mockup">
                             </a>
                             <div class = "description">
                                 <h4>huddleUp</h4>
@@ -73,7 +73,7 @@
                                 <button class = "y"></button>
                             </div>
                             <a href = "https://github.com/racheljayi/KeyFinder" class = "thumbnail">
-                                <img src = "../images/projects/KeyFinder.png" alt = "KeyFinder mockup">
+                                <img src = "images/projects/KeyFinder.png" alt = "KeyFinder mockup">
                             </a>
                             <div class = "description">
                                 <h4>KeyFinder</h4>
@@ -93,7 +93,7 @@
                                 <button class = "y"></button>
                             </div>
                             <a href = "https://github.com/racheljayi/RiotCreche" class = "thumbnail">
-                                <img src = "../images/projects/riotcreche.png" alt = "RiotCreche mockup">
+                                <img src = "images/projects/riotcreche.png" alt = "RiotCreche mockup">
                             </a>
                             <div class = "description">
                                 <h4>RiotCreche</h4>
@@ -112,7 +112,7 @@
                                 <button class = "y"></button>
                             </div>
                             <a href = "https://github.com/racheljayi/picturesque" class = "thumbnail">
-                                <img src = "../images/projects/picturesque.png" alt = "Picturesque mockup">
+                                <img src = "images/projects/picturesque.png" alt = "Picturesque mockup">
                             </a>
                             <div class = "description">
                                 <h4>Picturesque</h4>
@@ -124,6 +124,15 @@
                                 <a href = "https://github.com/racheljayi/picturesque" class = "btn">enter project</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="gameGrid">
+                    <div class="gameCard">
+                        <a href = "https://arjayi.itch.io/tiny-shadows">
+                            <img src = "images/games/TinyShadows.png" alt = "Tiny Shadows Image">
+                        </a>
+                            <img src = "images/games/Game%20Cartridge.png" alt = "Empty Game Cartridge">
+                            <img src = "images/games/Game%20Cartridge.png" alt = "Empty Game Cartridge">
                     </div>
                 </div>
             </div>
