--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="aboutMe">
                     <h2 class="hello">Hello!<h3>I'm Rachel.</h3></h2>
                     <p class="intro">I'm an undergraduate computer science student currently based
-                        in Pittsburgh. My career interests include software design, artificial intelligence,
-                        machine learning, and game development.
+                        in Pittsburgh. My career interests include software design and engineering,
+                        cybersecurity, and game development.
                         Thanks for stopping by!</p>
                 </div>
                 <div class = "aboutGraphic">
@@ -131,8 +131,8 @@
                         <a href = "https://arjayi.itch.io/tiny-shadows">
                             <img src = "images/games/TinyShadows.png" alt = "Tiny Shadows Image">
                         </a>
-                            <img src = "images/games/Game%20Cartridge.png" alt = "Empty Game Cartridge">
-                            <img src = "images/games/Game%20Cartridge.png" alt = "Empty Game Cartridge">
+                            <img src = "images/games/GameCartridge.png" alt = "Empty Game Cartridge">
+                            <img src = "images/games/GameCartridge.png" alt = "Empty Game Cartridge">
                     </div>
                 </div>
             </div>
