--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2 class="hello">Hello!<h3>I'm Rachel.</h3></h2>
                     <p class="intro">I'm an undergraduate computer science student currently based
                         in Pittsburgh. My career interests include software design and engineering,
-                        cybersecurity, and game development.
+                        machine learning and AI, and game development.
                         Thanks for stopping by!</p>
                 </div>
                 <div class = "aboutGraphic">
