--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Rachel Jan</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Gafata&family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
