--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <header class="header">
     <img class="logo" src="images/flower_copy_resized.png"/>
-    <button class="connect"><a href="mailto:rcj.rachel@gmail.com" style="text-decoration: none;color: white">
-        Let's Connect!</a></button>
+    <button class="connect"><a href="images/Rachel_Jan_Portfolio.pdf" style="text-decoration: none;color: white">
+        My Portfolio</a></button>
 </header>
 <body>
 <div class="home">
@@ -26,8 +26,8 @@
             machine learning and AI, and <span class="accentBody">game
             development</span>. Thanks for stopping by!</div>
         <div class="media-buttons">
-            <a href="" target="blank_">
-                <img class="media" src="images/icons8-twitter-50.png"/>
+            <a href="mailto:rcj.rachel@gmail.com" target="blank_">
+                <img class="media" src="images/icons8-mail-48.png"/>
             </a>
             <a href="https://www.linkedin.com/in/rcjan/" target="blank_">
                 <img class="media" src="images/icons8-linkedin-50.png"/>
