--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 My career interests include <span class="accent">software engineering, machine learning and AI,</span>
                 and <span class="accent">game development</span>. Thanks for stopping by!</p>
                 <ul>
-                    <li>Email</li>
-                    <li>LinkedIn</li>
-                    <li>Github</li>
+                    <li><a href="mailto:rcj.rachel@gmail.com" target="blank_">Email</a></li>
+                    <li><a href="https://www.linkedin.com/in/rcjan/" target="blank_">LinkedIn</a></li>
+                    <li><a href="https://github.com/racheljayi" target="blank_">Github</a></li>
                 </ul>
             </div>
             <div class="education">
@@ -101,7 +101,7 @@
                 <div class="project-text">
                     <h1>SoniCast</h1>
                     <h2>Custom Spotify Playlist Generator</h2>
-                    <h3>github.com/racheljayi/SoniCast</h3>
+                    <h3><a href="https://github.com/racheljayi/SoniCast" target="blank_">github.com/racheljayi/SoniCast</a></h3>
                     <p>
                         Still under development.
                     </p>
@@ -111,13 +111,15 @@
                         <li>PostgreSQL</li>
                     </ul>
                 </div>
-                <img src="static/images/6.png" class="project-graphic"/>
+                <div class="project-graphic">
+                    <img src="static/images/6.png" class="graphic"/>
+                </div>
             </div>
             <div class="project" id="project5" style="display: none">
                 <div class="project-text">
                     <h1>Game of Life</h1>
                     <h2>Simple Cellular Automaton Simulation</h2>
-                    <h3>github.com/racheljayi/GameOfLife</h3>
+                    <h3><a href="https://github.com/racheljayi/GameOfLife" target="blank_">github.com/racheljayi/GameOfLife</a></h3>
                     <p>
                         Based on John Conway’s Game of Life, this project is a simulation of a grid of cells that evolve,
                         reproduce, and die based on certain rules.
@@ -137,13 +139,15 @@
                         <li>C++</li>
                     </ul>
                 </div>
-                <img src="static/images/5.png" class="project-graphic"/>
+                <div class="project-graphic">
+                    <img src="static/images/5.png" class="graphic"/>
+                </div>
             </div>
             <div class="project" id="project4" style="display: none">
                 <div class="project-text">
                     <h1>Tiny Shadows</h1>
                     <h2>2-Player Platformer Game</h2>
-                    <h3>github.com/racheljayi/TinyShadows</h3>
+                    <h3><a href="http://github.com/racheljayi/TinyShadows" target="blank_">github.com/racheljayi/TinyShadows</a></h3>
                     <p>
                         Tiny Shadows is a 2D, local 2-player platformer game around 10 minutes long, developed for the 2023
                         GameMaker's Toolkit Game Jam. I chose to create it with the Godot 4 engine due to the engine's
@@ -168,13 +172,15 @@
                         <li>Godot4</li>
                     </ul>
                 </div>
-                <img src="static/images/4.png" class="project-graphic"/>
+                <div class="project-graphic">
+                    <img src="static/images/4.png" class="graphic"/>
+                </div>
             </div>
             <div class="project" id="project3" style="display: none">
                 <div class="project-text">
                     <h1>huddleUp</h1>
                     <h2>Social Media Web Application</h2>
-                    <h3>github.com/amb10/huddleUp</h3>
+                    <h3><a href="http://github.com/amb10/huddleUp" target="blank_">github.com/amb10/huddleUp</a></h3>
                     <p>
                         huddleUp is a social media platform designed for college students to easily find and join social
                         events on campus. It allows users to make accounts, post events, and sign up for activities.
@@ -193,13 +199,15 @@
                         <li>Flask</li>
                     </ul>
                 </div>
-                <img src="static/images/3.png" class="project-graphic"/>
+                <div class="project-graphic">
+                    <img src="static/images/3.png" class="graphic"/>
+                </div>
             </div>
             <div class="project" id="project2" style="display: none">
                 <div class="project-text">
                     <h1>KeyFinder</h1>
                     <h2>AI-Powered Keycard Maker</h2>
-                    <h3>github.com/racheljayi/KeyFinder</h3>
+                    <h3><a href="http://github.com/racheljayi/KeyFinder" target="blank_">github.com/racheljayi/KeyFinder</a></h3>
                     <p>
                         KeyFinder is a full-stack Flask webApp that identifies key vocabulary in a given text and
                         creates key cards for the user. It was created as a solo project for the SheInnovates 2023
@@ -221,13 +229,15 @@
                         <li>MySQL</li>
                     </ul>
                 </div>
-                <img src="static/images/2.png" class="project-graphic"/>
+                <div class="project-graphic">
+                    <img src="static/images/2.png" class="graphic"/>
+                </div>
             </div>
             <div class="project" id="project1" style="display: none">
                 <div class="project-text">
                     <h1>RiotCreche</h1>
                     <h2>Python Machine Learning Model</h2>
-                    <h3>github.com/racheljayi/RiotCreche</h3>
+                    <h3><a href="http://github.com/racheljayi/RiotCreche" target="blank_">github.com/racheljayi/RiotCreche</a></h3>
                     <p>
                         RiotCreche is a machine learning model that aims to predict a game outcome given two League of
                         Legends team compositions.
@@ -250,7 +260,9 @@
                         <li>scikit-learn</li>
                     </ul>
                 </div>
-                <img src="static/images/1.png" class="project-graphic"/>
+                <div class="project-graphic">
+                    <img src="static/images/1.png" class="graphic"/>
+                </div>
             </div>
         </div>
     </div>
