New portfolio final

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="static/themes/fonts.css">
     <script src="script.js"></script>
 </head>
-<header>
-    <h1>Sorry for the mess!</h1>
-    <p>This site still under development, so some links may be missing.
-        But, please feel free to take a look at my projects and experience!</p>
-</header>
 <body>
 <div class="home">
     <div class="profile" id="profile">
@@ -40,9 +35,14 @@
                 My career interests include <span class="accent">software engineering, machine learning and AI,</span>
                 and <span class="accent">game development</span>. Thanks for stopping by!</p>
                 <ul>
-                    <li><a href="mailto:rcj.rachel@gmail.com" target="blank_">Email</a></li>
-                    <li><a href="https://www.linkedin.com/in/rcjan/" target="blank_">LinkedIn</a></li>
-                    <li><a href="https://github.com/racheljayi" target="blank_">Github</a></li>
+                    <li><a href="mailto:rcj.rachel@gmail.com" target="blank_">
+                        <img src="static/images/email-dark.png"/>
+                    </a></li>
+                    <li><a href="https://www.linkedin.com/in/rcjan/" target="blank_">
+                        <img src="static/images/linkedin-dark.png"/>
+                    <li><a href="https://github.com/racheljayi" target="blank_">
+                        <img src="static/images/github-dark.png"/>
+                    </a></li>
                 </ul>
             </div>
             <div class="education">
@@ -354,6 +354,11 @@
 </html>
 
 <!--to do:-->
+
+<!-- SCRAP THIS WE'RE TAKING A BREAK & THEN COMING BACK WITH AMSTERDAM CANALS STYLE -->
+<!-- PARRALLAX SCROLLING WITH VOGUE/ELLE MAGAZINE INSPIRED LAYOUT DIVS -->
+
+
 <!-- - add everything to HTML (projects, experience)-->
 <!-- - edit text according to justin's guidelines/advice-->
 <!-- - add graphics-->
